feat: Add HTML Structure

--- a/#3 - Botões e cursores/index.html
+++ b/#3 - Botões e cursores/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Botões e cursores - Desafio #3</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="left">
+            <div class="th">
+                <p class="txt-top">Botão primário</p>
+                <p class="txt-top">Botão secundário</p>
+                <p class="txt-top">Botão terceário</p>
+                <p class="txt-top">Cursor</p>
+            </div>
+            <div class="tb">
+                <div class="col-left">
+                    <p class="txt-left">Default</p>
+                    <p class="txt-left">Hiver</p>
+                    <p class="txt-left">Focus</p>
+                    <p class="txt-left">Disabled</p>
+                    <p class="txt-left">Loading</p>
+                    <p class="txt-left">Movable</p>
+                </div>
+                <div class="col-rigth"></div>
+            </div>    
+        </section>
+        <section class="rigth">
+            <div>
+                <h1>Teste os botões</h1>
+                <p>Interaja com os botões e observe a mudança de aparência e de cursores</p>
+            </div>
+            <button>Interaja comigo</button>
+            <button>Interaja comigo</button>
+            <div>
+                <img src="" alt="menu-icon" class="menu-icon">
+                <span class="menu-text">Interaja comigo</span>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
