feat: update HTML

--- a/#3 - Botões e cursores/index.html
+++ b/#3 - Botões e cursores/index.html
@@ -4,27 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Botões e cursores - Desafio #3</title>
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <main>
         <section class="left">
-            <div class="th">
-                <p class="txt-top">Botão primário</p>
-                <p class="txt-top">Botão secundário</p>
-                <p class="txt-top">Botão terceário</p>
-                <p class="txt-top">Cursor</p>
-            </div>
-            <div class="tb">
-                <div class="col-left">
-                    <p class="txt-left">Default</p>
-                    <p class="txt-left">Hiver</p>
-                    <p class="txt-left">Focus</p>
-                    <p class="txt-left">Disabled</p>
-                    <p class="txt-left">Loading</p>
-                    <p class="txt-left">Movable</p>
+            <div class="text"></div>
+            <div class="table">
+                <div class="th">
+                    <p class="txt-top">Botão primário</p>
+                    <p class="txt-top">Botão secundário</p>
+                    <p class="txt-top">Botão terceário</p>
+                    <p class="txt-top">Cursor</p>
                 </div>
-                <div class="col-rigth"></div>
+                <div class="tb">
+                    <div class="col-left">
+                        <p class="txt-left">Default</p>
+                        <p class="txt-left">Hiver</p>
+                        <p class="txt-left">Focus</p>
+                        <p class="txt-left">Disabled</p>
+                        <p class="txt-left">Loading</p>
+                        <p class="txt-left">Movable</p>
+                    </div>
+                    <div class="col-rigth">
+                        <div class="row">
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                        </div>
+                        <div class="row">
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                        </div>
+                        <div class="row">
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                        </div>
+                        <div class="row">
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                        </div>
+                        <div class="row">
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                        </div>
+                        <div class="row">
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                            <button>TextButton</button>
+                        </div>
+                    </div>
+                </div>
             </div>    
         </section>
         <section class="rigth">
