--- a/#2 - Card de Produto/index.html
+++ b/#2 - Card de Produto/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card de Produto - Desafio #2</title>
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200;400;600;800;900&display=swap" rel="stylesheet">
 </head>
