feat: add svg icons

--- a/#3 - Botões e cursores/index.html
+++ b/#3 - Botões e cursores/index.html
@@ -32,37 +32,86 @@
                             <button>TextButton</button>
                             <button>TextButton</button>
                             <button>TextButton</button>
-                            <button>TextButton</button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="19" viewBox="0 0 12 19" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.204468 16.015V0L11.7955 11.619H5.01447L4.60347 11.743L0.204468 16.015Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.28895 16.6893L5.68395 18.2243L1.00195 7.13528L4.68795 5.58228L9.28895 16.6893Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.95547 16.0086L6.11147 16.7826L3.01147 9.40861L4.85248 8.63361L7.95547 16.0086Z" fill="black"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.20447 2.4071V13.5951L4.17347 10.7291L4.60147 10.5901H9.36947L1.20447 2.4071Z" fill="black"/>
+                              </svg>
                         </div>
                         <div class="row">
                             <button>TextButton</button>
                             <button>TextButton</button>
                             <button>TextButton</button>
-                            <button>TextButton</button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="19" viewBox="0 0 12 19" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.204468 16.015V0L11.7955 11.619H5.01447L4.60347 11.743L0.204468 16.015Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.28895 16.6893L5.68395 18.2243L1.00195 7.13528L4.68795 5.58228L9.28895 16.6893Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.95547 16.0086L6.11147 16.7826L3.01147 9.40861L4.85248 8.63361L7.95547 16.0086Z" fill="black"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.20447 2.4071V13.5951L4.17347 10.7291L4.60147 10.5901H9.36947L1.20447 2.4071Z" fill="black"/>
+                            </svg>
                         </div>
                         <div class="row">
                             <button>TextButton</button>
                             <button>TextButton</button>
                             <button>TextButton</button>
-                            <button>TextButton</button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="19" viewBox="0 0 12 19" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.204468 16.015V0L11.7955 11.619H5.01447L4.60347 11.743L0.204468 16.015Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.28895 16.6893L5.68395 18.2243L1.00195 7.13528L4.68795 5.58228L9.28895 16.6893Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.95547 16.0086L6.11147 16.7826L3.01147 9.40861L4.85248 8.63361L7.95547 16.0086Z" fill="black"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.20447 2.4071V13.5951L4.17347 10.7291L4.60147 10.5901H9.36947L1.20447 2.4071Z" fill="black"/>
+                              </svg>
                         </div>
                         <div class="row">
                             <button>TextButton</button>
                             <button>TextButton</button>
                             <button>TextButton</button>
-                            <button>TextButton</button>
+                            <img src="./assets/icon/notallowed.png" alt="not Allowed image" style="width: 14.525px; height: 24px;" >
                         </div>
                         <div class="row">
                             <button>TextButton</button>
                             <button>TextButton</button>
                             <button>TextButton</button>
-                            <button>TextButton</button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="32" viewBox="0 0 20 32" fill="none">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 16V0L12.1 11.6H5.1L4.9 11.7L0.5 16Z" fill="white"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M1.5 2.40002V13.6L4.5 10.7L4.6 10.6H9.6L1.5 2.40002Z" fill="black"/>
+                                    <mask id="mask0_102_635" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="1" y="13" width="19" height="19">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1.5 22.6C1.5 24.9869 2.44821 27.2761 4.13604 28.9639C5.82387 30.6518 8.11305 31.6 10.5 31.6C12.8869 31.6 15.1761 30.6518 16.864 28.9639C18.5518 27.2761 19.5 24.9869 19.5 22.6C19.5 20.213 18.5518 17.9238 16.864 16.236C15.1761 14.5482 12.8869 13.6 10.5 13.6C8.11305 13.6 5.82387 14.5482 4.13604 16.236C2.44821 17.9238 1.5 20.213 1.5 22.6Z" fill="white"/>
+                                    </mask>
+                                    <g mask="url(#mask0_102_635)">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1.5 13.6H10.5V22.6H1.5V13.6Z" fill="url(#paint0_linear_102_635)"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5 22.6H19.5V31.6H10.5V22.6Z" fill="url(#paint1_linear_102_635)"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5 13.6H19.5V22.6H10.5V13.6Z" fill="url(#paint2_linear_102_635)"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1.5 22.6H10.5V31.6H1.5V22.6Z" fill="url(#paint3_linear_102_635)"/>
+                                    </g>
+                                    <defs>
+                                        <linearGradient id="paint0_linear_102_635" x1="6" y1="13.6" x2="6" y2="22.6" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#4AB4EF"/>
+                                        <stop offset="1" stop-color="#3582E5"/>
+                                        </linearGradient>
+                                        <linearGradient id="paint1_linear_102_635" x1="15" y1="22.6" x2="15" y2="31.6" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#3481E4"/>
+                                        <stop offset="1" stop-color="#2051DB"/>
+                                        </linearGradient>
+                                        <linearGradient id="paint2_linear_102_635" x1="15" y1="13.6" x2="15" y2="22.6" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#6BDCFC"/>
+                                        <stop offset="1" stop-color="#4DC6FA"/>
+                                        </linearGradient>
+                                        <linearGradient id="paint3_linear_102_635" x1="6" y1="22.6" x2="6" y2="31.6" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#4BC5F9"/>
+                                        <stop offset="1" stop-color="#2FB0F8"/>
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
                         </div>
                         <div class="row">
                             <button>TextButton</button>
                             <button>TextButton</button>
                             <button>TextButton</button>
-                            <button>TextButton</button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.0005 4.987H11.0005V5.987H10.0005V4.987ZM11.0005 10.987H10.0005V9.987H11.0005V10.987ZM6.0005 5.987H5.0005V4.987H6.0005V5.987ZM6.0005 10.987H5.0005V9.987H6.0005V10.987ZM8.0005 0L0.0155029 7.988L5.2375 13.209L8.0005 15.972L15.9845 7.987L8.0005 0Z" fill="white"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M14.567 7.98417L12.01 5.17517V7.00417H8.00096H3.99996V5.17517L1.42896 7.98417L4.00095 10.7922L3.99996 8.98417H8.00096H12.01L12.009 10.7922L14.567 7.98417Z" fill="black"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.98791 7.98702H9.00091V3.98602L10.8079 3.98702L8.00091 1.41602L5.19191 3.98602H7.00091V7.98702H7.00891V11.989L5.18091 11.988L7.98791 14.565L10.7929 11.989H8.98791V7.98702Z" fill="black"/>
+                            </svg>
                         </div>
                     </div>
                 </div>
